@@ -56,6 +56,8 @@
   <li>Sarah Mercier</li>
   <li>Matt Rolf</li>
   <li>Adrian Yee</li>
+  <li>Michael Herring</li>
   <li>Kahil Jallad</li>
   <li>Michael Mart&iacute;</li>
+  <li>David Oliveira</li>
 </ul>
