@@ -28,6 +28,11 @@ Cover dates are no longer exported with the wrong year (2009) when their dates
 are in the first three days of 2010. Thanks to Paul Orrock for the spot (Bug
 #122) and David Oliveira via Bret Dawson for the fix! [David]
 
+=item *
+
+Fixed an error in L<Bric::Biz::Contact> where a boolean value was not passed
+to the database as a boolean. [David Oliveira]
+
 =back
 
 =back
